# adaptive-os

./: .claude-progress.md  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
aur/: .SRCINFO  PKGBUILD
docs/architecture/: orchestrator.md  overview.md  profiles.md
docs/guides/: contributing.md  installation.md  nixos-setup.md
nix/: flake.nix
nix/modules/: base.nix  wayland.nix
nix/overlays/: adaptive-os.nix
nix/profiles/: creative.nix  gaming.nix  server.nix  study.nix  work.nix
orchestrator/: pyproject.toml
orchestrator/adaptive_os/: __init__.py  cli.py  main.py
orchestrator/adaptive_os/api/: server.py
orchestrator/adaptive_os/core/: config.py  decision_engine.py  habit_tracker.py  orchestrator.py  state.py  voice_interface.py
orchestrator/adaptive_os/detectors/: context.py
orchestrator/adaptive_os/profiles/: manager.py
orchestrator/profiles/: creative.yaml  gaming.yaml  server.yaml  study.yaml  work.yaml
scripts/: adaptive-os.service  install.sh  rofi-profile-switcher.sh
tests/integration/: test_orchestrator_flow.py
tests/unit/: test_context_detector.py  test_decision_engine.py
ui/hyprland/: creative.conf  gaming.conf  server.conf  study.conf  work.conf
ui/rofi/: adaptive-os-switcher.rasi  config.rasi  theme-creative.rasi  theme-gaming.rasi  theme-server.rasi  theme-study.rasi  theme-work.rasi
ui/themes/creative/: apply.sh
ui/themes/gaming/: apply.sh
ui/themes/server/: apply.sh
ui/themes/study/: apply.sh
ui/themes/work/: apply.sh
ui/waybar/: creative.jsonc  gaming.jsonc  server.jsonc  study.jsonc  work.jsonc
